WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104269
[Qt][WK2] Fix QWebKitTest's notification of device pixel ratio change
https://bugs.webkit.org/show_bug.cgi?id=104269
Summary
[Qt][WK2] Fix QWebKitTest's notification of device pixel ratio change
Andras Becsi
Reported
2012-12-06 09:15:32 PST
[Qt][WK2] Fix QWebKitTest's notification of device pixel ratio change
Attachments
Patch
(3.01 KB, patch)
2012-12-06 09:16 PST
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2012-12-06 09:16:29 PST
Created
attachment 178020
[details]
Patch
Andras Becsi
Comment 2
2012-12-06 09:54:19 PST
Comment on
attachment 178020
[details]
Patch Clearing flags on attachment: 178020 Committed
r136851
: <
http://trac.webkit.org/changeset/136851
>
Andras Becsi
Comment 3
2012-12-06 09:54:24 PST
All reviewed patches have been landed. Closing bug.
Andras Becsi
Comment 4
2012-12-06 11:22:10 PST
Committed
r136859
: <
http://trac.webkit.org/changeset/136859
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug