[Qt][WK2] Fix QWebKitTest's notification of device pixel ratio change https://bugs.webkit.org/show_bug.cgi?id=104269

Reviewed by Kenneth Rohde Christiansen.

Since the ViewportInfoItem of MiniBrowser is created before the
WebView finishes construction, thus before the viewport controller
has been instantiated, the shown device pixel ratio was incorrect.
Additionally QWebKitTest's notification signal was also not emitted
when the value changed.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::QQuickWebViewPrivate):
* UIProcess/qt/PageViewportControllerClientQt.cpp:
(WebKit::PageViewportControllerClientQt::PageViewportControllerClientQt):

Canonical link: https://commits.webkit.org/122428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136851 268f45cc-cd09-0410-ab3c-d52691b4dbfc